--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2013-2016</span>
-						<h2>Indian School Certificate, I.S.C.</h2>
+						<h2>Indian School Certificate, I.S.C. (XII)</h2>
 						<span class="position">The Bhawanipur Gujarati Education Society School</span>
 						<p class="mt-4">Grade: 93.5%</p>
 					</div>
