--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Hackerrank</span>
-						<h2>Skill Certificate</h2>
+						<h2>Skill Certificate - SQL (Advanced)</h2>
 						<div class="about-img">
 							<a href="https://www.hackerrank.com/certificates/759fd3c182d8?test_finished=true">
 								<img src="images/sql.jpg" class="img-fluid rounded b-shadow-a" alt="">
