--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 											<p><span class="title-s">Name: </span> <span>Soumya Das</span></p>
 											<p><span class="title-s">Job Role: </span> <span>Data Analyst</span>
 											</p>
-											<p><span class="title-s">Tot. Exp.: </span> <span>2 Years 2 Months</span>
+											<p><span class="title-s">Tot. Exp.: </span> <span>1 Year 6 Months</span>
 											</p>
 											<p><span class="title-s">Address: </span> <span>Hyderabad, India</span></p>
 										</div>
@@ -318,7 +318,7 @@
 									</li>
 									<!-- <li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital
 											Marketing</span></li> -->
-									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
+									<li class="d-flex"><span>Education:</span> <span>Bachelor of Computer Applications</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Bengali</span></li>
 									<!-- <li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, Looker &amp;
 											Tableau</span></li> -->
@@ -363,14 +363,14 @@
 
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/sho-das/Bank-Loan-Report-Analysis/tree/main"
+						<a href="https://github.com/sho-das/Bank-Loan-Distribution-Analysis/tree/main"
 							class="block-20 zoom-effect" style="background-image: url('images/bank_report.png');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 
 							<h3 class="heading"><a
-									href="https://github.com/sho-das/Bank-Loan-Report-Analysis/tree/main">Bank Loan
-									Report Analysis |<br> MS Excel & TABLEAU</a></h3>
+									href="https://github.com/sho-das/Bank-Loan-Distribution-Analysis/tree/main">Bank Loan
+									Distribution Analysis |<br> MS Excel & TABLEAU</a></h3>
 							<p>Streamlined loan disbursal process by evaluating 40,000+ bank loans from 50 US states
 								of year 2021.</p>
 						</div>
@@ -412,13 +412,13 @@
 				</div> -->
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry">
-						<a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg"
+						<a href="https://github.com/sho-das/US-Based-Cafe-Sales-Analysis"
 							class="block-20 zoom-effect" style="background-image: url('images/cafe_store.png');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 
 							<h3 class="heading"><a
-									href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Cafe
+									href="https://github.com/sho-das/US-Based-Cafe-Sales-Analysis">US-Based Cafe
 									Sales Analysis | <br>MySQL and Power BI</a></h3>
 							<p>Assessed over 150k+ transactions across 3 cafe stores to provide marketing
 								recommendations and forecast
@@ -439,7 +439,7 @@
 
 							<h3 class="heading"><a
 									href="https://github.com/sho-das/Customer-Market-Segmentation">Customer
-									Market Segmentation | <br> Python - K-Means Clustering </a></h3>
+									Market Segmentation <br> Using K-Means Clustering </a></h3>
 							<p>Developed a ML model to give various recommendations of financial products &amp; services
 								on target customer groups.</p>
 						</div>
@@ -454,7 +454,7 @@
 
 							<h3 class="heading"><a href="https://github.com/sho-das/PUBG-Player-Ranking-Prediction">PUBG
 									Rank
-									Prediction | <br> Python - CatBoost Model</a></h3>
+									Prediction <br> Using CatBoost Model</a></h3>
 							<p>Trained and tested 4.5million+ data on CatBoost Model to predicting players rank
 								outcomes,
 								achieving an RMSE of 0.08.</p>
