--- a/index.html
+++ b/index.html
@@ -309,10 +309,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 
-								<p>Data Analyst with strong skills in Python (Pandas, NumPy, Matplotlib), SQL (MySQL,
-									PostgreSQL), and advanced Excel for detailed data handling and visualization.
-									Experienced in creating interactive dashboards with Tableau and Power BI, and
-									proficient in using machine learning models for making predictions.</p>
+								<p>Analyst with 1.5 years of experience in interpreting and presenting large datasets to enhance spending efficiency in organizations. Skilled in Python (Pandas, NumPy, Matplotlib), SQL (MySQL and PostgreSQL), and Advanced Excel for detailed data manipulation and visualization. Experienced in creating interactive dashboards using Tableau and Power BI, and machine learning models (using scikit-learn) for predictive analysis.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Data Science &amp; Analytics</span>
 									</li>
