--- a/index.html
+++ b/index.html
@@ -309,14 +309,17 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 
-								<p>Data Analyst with 1.5 years of experience in interpreting and presenting large datasets to enhance organizational efficiency. <br>
-									Proficient in Python (Pandas, NumPy, Matplotlib), SQL (MySQL, PostgreSQL), Advanced Excel, Tableau, Power BI, and machine learning (scikit-learn) for predictive analysis.</p>
+								<p>1.5 years of experience in data analysis, specializing in interpreting and presenting
+									large datasets to optimize efficiency. Skilled in Python (Pandas, NumPy,
+									Matplotlib), SQL (MySQL, PostgreSQL), Advanced Excel, Tableau, Power BI, and machine
+									learning (scikit-learn) for predictive analysis.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Data Science &amp; Analytics</span>
 									</li>
 									<!-- <li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital
 											Marketing</span></li> -->
-									<li class="d-flex"><span>Education:</span> <span>Bachelor of Computer Applications</span></li>
+									<li class="d-flex"><span>Education:</span> <span>Bachelor of Computer
+											Applications</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Bengali</span></li>
 									<!-- <li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, Looker &amp;
 											Tableau</span></li> -->
@@ -367,7 +370,8 @@
 						<div class="text mt-3 float-right d-block">
 
 							<h3 class="heading"><a
-									href="https://github.com/sho-das/Bank-Loan-Distribution-Analysis/tree/main">Bank Loan
+									href="https://github.com/sho-das/Bank-Loan-Distribution-Analysis/tree/main">Bank
+									Loan
 									Distribution Analysis |<br> MS Excel & TABLEAU</a></h3>
 							<p>Streamlined loan disbursal process by evaluating 40,000+ bank loans from 50 US states
 								of year 2021.</p>
@@ -410,8 +414,8 @@
 				</div> -->
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry">
-						<a href="https://github.com/sho-das/US-Based-Cafe-Sales-Analysis"
-							class="block-20 zoom-effect" style="background-image: url('images/cafe_store.png');">
+						<a href="https://github.com/sho-das/US-Based-Cafe-Sales-Analysis" class="block-20 zoom-effect"
+							style="background-image: url('images/cafe_store.png');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 
@@ -437,7 +441,7 @@
 
 							<h3 class="heading"><a
 									href="https://github.com/sho-das/Customer-Market-Segmentation">Customer
-									Market Segmentation <br> Using K-Means Clustering </a></h3>
+									Market Segmentation | <br> Python & ML </a></h3>
 							<p>Developed a ML model to give various recommendations of financial products &amp; services
 								on target customer groups.</p>
 						</div>
@@ -451,8 +455,7 @@
 						<div class="text mt-3 float-right d-block">
 
 							<h3 class="heading"><a href="https://github.com/sho-das/PUBG-Player-Ranking-Prediction">PUBG
-									Rank
-									Prediction <br> Using CatBoost Model</a></h3>
+									Player Ranking Prediction | <br> Python & ML</a></h3>
 							<p>Trained and tested 4.5million+ data on CatBoost Model to predicting players rank
 								outcomes,
 								achieving an RMSE of 0.08.</p>
@@ -543,15 +546,16 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Marketing Analyst</span>
-						<h2>Mantra</h2>
-						<span class="position">Hyderabad, Telengana <br> AUG 2022-DEC 2022</span>
-						<p class="mt-4">Mantra is a leading IT consulting company headquartered in NY, USA. It is among
-							the world's first to provide an all-in-one suite of apps for process automation.
+						<span class="date">Chief Strategist / Analyst</span>
+						<h2>Beesho</h2>
+						<span class="position">Hyderabad, Telengana <br> JUN 2023-JUN 2024</span>
+						<p class="mt-4">Beesho blends gaming and VR into the school curriculum, making learning cool
+							increasing retention of topics both at school and home.
 						<ul>
-							<li>Optimized website SEO and managed Google Ads, increasing organic traffic by 20%.
-							</li>
-							<li>Conducted competitive analysis and market research to shape digital strategy.</li>
+							<li> Developed and tracked KPIs, positioning the company among the <b>top 3</b> educational
+								startups in Hyderabad. </li>
+							<li>Applied EDA to identify high-potential mid-segment schools, optimizing resource
+								allocation and achieving a 15% increase in product adoption.</li>
 						</ul>
 						</p>
 					</div>
@@ -560,23 +564,23 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Founder & CEO</span>
-						<h2>Beesho</h2>
-						<span class="position">Hyderabad, Telengana <br> JUN 2023-JUN 2024</span>
-						<p class="mt-4">Beesho, a fun and interactive learning platform, makes education enjoyable for
-							teachers and students. It was also nominated twice for nation wide competitions.
+						<span class="date">Marketing Analyst</span>
+						<h2>Mantra</h2>
+						<span class="position">Hyderabad, Telengana <br> AUG 2022-DEC 2022</span>
+						<p class="mt-4">Mantra is among the world's first to provide an all-in-one suite of apps for
+							process automation based in NY, USA.
 						<ul>
-							<li> Created an immersive gaming experience that proved to increase student engagement by
-								atleast 70% </li>
-							<li>Formulated strategies and daily KPIs leading to being ranked in top 3
-								educational startups in
-								Hyderabad.</li>
+							<li>Analyzed sales and customer data with SQL, optimizing targeting and segmentation for a
+								15% boost in marketing performance and revenue growth.</li>
+							<li>Evaluated marketing campaigns using Excel and Tableau, increasing daily web traffic from
+								2,800 to 5,500+ in 4 months based on Google Analytics data.
+							</li>
 						</ul>
 						</p>
 					</div>
 
 				</div>
-
+				<!-- 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Business Development Executive</span>
@@ -611,7 +615,7 @@
 						</p>
 					</div>
 
-				</div>
+				</div> -->
 
 
 
@@ -622,7 +626,7 @@
 
 
 			<div class="row">
-				<h1 class="big-4">Cerificates</h1>
+				<h1 class="big-4">Cerificates & Achievements</h1>
 				<div class="underline"></div>
 			</div>
 			<br>
@@ -660,19 +664,6 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Hackerrank</span>
-						<h2>Skill Certificate - SQL (Advanced)</h2>
-						<div class="about-img">
-							<a href="https://www.hackerrank.com/certificates/759fd3c182d8?test_finished=true">
-								<img src="images/sql.jpg" class="img-fluid rounded b-shadow-a" alt="">
-							</a>
-						</div>
-					</div>
-				</div>
-
-
-				<div class="col-md-6">
-					<div class="resume-wrap ftco-animate">
 						<span class="date">Scaler Academy</span>
 						<h2>EDA and Data Visualization Course in Data Science</h2>
 						<div class="about-img">
@@ -684,14 +675,26 @@
 					</div>
 				</div>
 
+
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Scaler Academy</span>
-						<h2>Python and SQL for Data Science</h2>
+						<span class="date">HackerRank</span>
+						<h2>Skill Certificate - SQL (Advanced)</h2>
 						<div class="about-img">
-							<a
-								href="https://moonshot.scaler.com/s/sl/ICasRVPwp3?_gl=1*ym65p3*_ga*MTE1OTcwNDE0NS4xNzE0NTc2NjYx*_ga_53S71ZZG1X*MTcxNDU3NjY2MS4xLjEuMTcxNDU4MzAwOS4wLjAuMTA3NzMyODcwNA..">
-								<img src="images/python_sql.png" class="img-fluid rounded b-shadow-a" alt="">
+							<a href="https://www.hackerrank.com/certificates/759fd3c182d8?test_finished=true">
+								<img src="images/sql.jpg" class="img-fluid rounded b-shadow-a" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">HackerRank</span>
+						<h2>5-star Gold Badge in SQL</h2>
+						<div class="about-img">
+							<a href="https://www.hackerrank.com/profile/sho_das">
+								<img src="images/gold_star.png" class="img-fluid rounded b-shadow-a" alt="">
 							</a>
 						</div>
 					</div>
