--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 					</font>
 				</h5>
 				<br>
-				<p><a href="https://github.com/sho-das" class="btn btn-primary py-3 px-5">GitHub</a></p>
+				<p><a href="https://github.com/sho-das?tab=repositories">GitHub</a></p>
 
 			</div>
 		</div>
@@ -788,7 +788,7 @@
 						<h3 class="mb-4"><a
 								href="https://drive.google.com/file/d/1NpNcGFhVDYo3c_vIXTmQUJTEIOHjPohc/view?usp=sharing">Download
 								Resume</a></h3>
-						<p><a href="https://drive.google.com/file/d/10WDhkb0j-OyGTnfuSZl8Y60drzEFBaFt/view?usp=sharing">↑
+						<p><a href="https://drive.google.com/file/d/1fjz-rJIuizweNUH-qxZodUxlYfQpMJv6/view?usp=sharing">↑
 								resume link ↑</a>
 						</p>
 					</div>
