--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 					</font>
 				</h5>
 				<br>
-				<p><a href="https://github.com/sho-das?tab=repositories"> GitHub </a></p>
+				<p><a href="https://github.com/sho-das?tab=repositories" class="btn btn-primary py-3 px-5">GitHub</a></p>
 
 			</div>
 		</div>
