--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
 
 
 			<div class="row">
-				<h1 class="big-4">Cerificates & Achievements</h1>
+				<h1 class="big-4"> Cerificates & Achievements </h1>
 				<div class="underline"></div>
 			</div>
 			<br>
@@ -776,8 +776,8 @@
 						<div class="icon d-flex align-items-center justify-content-center">
 							<span class="icon-paper-plane"></span>
 						</div>
-						<h3 class="mb-4"><a href="mailto:soumya.das.ibanalyst@gmail.com">Email Address</a></h3>
-						<p><a href="mailto:soumya.das.ibanalyst@gmail.com">soumya.das.ibanalyst@gmail.com</a></p>
+						<h3 class="mb-4"><a href="mailto:sho.das.1996@gmail.com">Email Address</a></h3>
+						<p><a href="mailto:sho.das.1996@gmail.com">sho.das.1996@gmail.com</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -786,9 +786,9 @@
 							<span class="icon-globe"></span>
 						</div>
 						<h3 class="mb-4"><a
-								href="https://drive.google.com/file/d/1fjz-rJIuizweNUH-qxZodUxlYfQpMJv6/view?usp=sharing">Download
+								href="https://drive.google.com/file/d/1EituWHW44inuFCTjgUYbtyblfQKQzuwg/view?usp=sharing">Download
 								Resume</a></h3>
-						<p><a href="https://drive.google.com/file/d/1fjz-rJIuizweNUH-qxZodUxlYfQpMJv6/view?usp=sharing">↑
+						<p><a href="https://drive.google.com/file/d/1EituWHW44inuFCTjgUYbtyblfQKQzuwg/view?usp=sharing">↑
 								resume link ↑</a>
 						</p>
 					</div>
