--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
 							<h3 class="heading"><a
 									href="https://github.com/sho-das/US-Based-Cafe-Sales-Analysis">US-Based Cafe
-									Sales Analysis | <br>MySQL and Power BI</a></h3>
+									Sales Analysis | <br>MySQL & Power BI</a></h3>
 							<p>Assessed over 150k+ transactions across 3 cafe stores to provide marketing
 								recommendations and forecast
 								revenue.</p>
@@ -626,7 +626,7 @@
 
 
 			<div class="row">
-				<h1 class="big-4"> Cerificates & Achievements </h1>
+				<h1 class="big-4"> Certificates & Achievements </h1>
 				<div class="underline"></div>
 			</div>
 			<br>
